--- a/package.json
+++ b/package.json
@@ -1,30 +1,88 @@
 {
   "dependencies": {
-    "angular2": "2.0.0-beta.7",
-    "es6-promise": "3.0.2",
-    "es6-shim": "0.33.13",
-    "ionic-framework": "2.0.0-beta.1",
-    "ionicons": "3.0.0-alpha.3",
-    "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.2",
-    "zone.js": "0.5.15"
+    "@angular/common": "^2.0.0-rc.1",
+    "@angular/compiler": "2.0.0-rc.1",
+    "@angular/core": "2.0.0-rc.1",
+    "@angular/http": "2.0.0-rc.1",
+    "@angular/platform-browser": "2.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
+    "@angular/router": "2.0.0-rc.1",
+    "es6-shim": "0.35.1",
+    "ionic-angular": "2.0.0-beta.9",
+    "ionic-native": "1.2.2",
+    "ionicons": "3.0.0",
+    "ng2-translate": "^2.1.0",
+    "reflect-metadata": "0.1.3",
+    "rxjs": "5.0.0-beta.6",
+    "zone.js": "0.6.12"
   },
   "devDependencies": {
-    "awesome-typescript-loader": "0.15.10",
-    "strip-sourcemap-loader": "0.0.1",
-    "typescript": "1.7.5"
+    "browserify": "13.0.0",
+    "browserify-istanbul": "2.0.0",
+    "codecov.io": "0.1.6",
+    "del": "2.2.0",
+    "gulp": "3.9.1",
+    "gulp-file": "^0.3.0",
+    "gulp-merge-json": "^0.4.0",
+    "gulp-tslint": "5.0.0",
+    "gulp-typescript": "2.13.4",
+    "gulp-watch": "4.3.5",
+    "ionic-gulp-browserify-typescript": "1.1.0",
+    "ionic-gulp-fonts-copy": "1.0.0",
+    "ionic-gulp-html-copy": "1.0.0",
+    "ionic-gulp-sass-build": "1.0.0",
+    "ionic-gulp-scripts-copy": "2.0.0",
+    "isparta": "4.0.0",
+    "jasmine-core": "2.4.1",
+    "jasmine-spec-reporter": "2.4.0",
+    "karma": "0.13.22",
+    "karma-browserify": "5.0.5",
+    "karma-chrome-launcher": "1.0.1",
+    "karma-coverage": "1.0.0",
+    "karma-jasmine": "1.0.2",
+    "karma-mocha-reporter": "2.0.3",
+    "karma-phantomjs-launcher": "1.0.0",
+    "phantomjs-prebuilt": "2.1.7",
+    "protractor": "3.3.0",
+    "run-sequence": "1.2.0",
+    "ts-node": "0.7.3",
+    "tsify": "0.16.0",
+    "tslint": "3.10.2",
+    "tslint-eslint-rules": "1.3.0",
+    "typings": "1.0.4"
   },
-  "name": "error-project",
-  "description": "at-mobile: An Ionic project",
+  "name": "Onepipnet",
+  "version": "0.0.1",
+  "description": "A mobile version of onepipnet service",
   "cordovaPlugins": [
     "cordova-plugin-device",
     "cordova-plugin-console",
     "cordova-plugin-whitelist",
     "cordova-plugin-splashscreen",
     "cordova-plugin-statusbar",
-    "ionic-plugin-keyboard"
+    "ionic-plugin-keyboard",
+    "net.yoik.cordova.plugins.screenorientation",
+    {
+      "variables": {
+        "XWALK_VERSION": "org.xwalk:xwalk_core_library:18+"
+      },
+      "locator": "cordova-plugin-crosswalk-webview",
+      "id": "cordova-plugin-crosswalk-webview"
+    },
+    "cordova-plugin-camera"
   ],
-  "cordovaPlatforms": [
-    "android"
-  ]
+  "cordovaPlatforms": [],
+  "scripts": {
+    "build": "gulp --gulpfile test/gulpfile.ts --cwd ./ build-app",
+    "e2e": "gulp --gulpfile test/gulpfile.ts --cwd ./ build-e2e && protractor test/protractor.conf.js",
+    "karma": "gulp --gulpfile test/gulpfile.ts --cwd ./ karma-debug",
+    "postinstall": "ionic state restore && typings install && webdriver-manager update && cp test/karma-static/*.html node_modules/karma/static",
+    "start": "ionic serve",
+    "test": "gulp --gulpfile test/gulpfile.ts --cwd ./ unit-test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://agiliumlabs.com/bitbucket/scm/op/onepip.git"
+  },
+  "license": "MIT"
 }
