--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@angular/platform-browser-dynamic": "^2.0.0-rc.3",
     "@angular/router": "^2.0.0-rc.2",
     "es6-shim": "0.35.1",
-    "ionic-angular": "^2.0.0-beta.9-201606271842",
+    "ionic-angular": "^2.0.0-beta.10",
     "ionic-native": "1.2.2",
     "ionicons": "3.0.0",
     "ng2-translate": "^2.1.0",
